--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,11 @@ spring:
     driver-class-name: com.mysql.jdbc.Driver
     username: root
     password: 123456
+  redis:
+    port:6379
+    host:192.168.106.128
+    password:123456
+
 server:
   port: 8081
 
