--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,18 +1,3 @@
 spring:
-  application:
-    name: BlogApplication
-  datasource:
-    url: jdbc:mysql://192.168.106.128:3306/blog_system?characterEncoding=utf-8&useSSL=false
-    driver-class-name: com.mysql.jdbc.Driver
-    username: root
-    password: 123456
-  redis:
-    port: 6379
-    host: 192.168.106.128
-    password: 123456
-
-server:
-  port: 8081
-
-
-
+  profiles:
+    active: dev
