--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -10,14 +10,19 @@ spring:
     port: 6379
     host: 192.168.106.128
     password: 123456
+    database: 1
   data:
     solr:
       host: http://192.168.106.128:8983/solr/blog_core
 server:
   port: 8082
 
-blog.image.save-path: \user\spike\Blog\images
-# 5MB
+# docker部署
+# 应该是docker内部的路径 映射 /home/spike/docker/Blog/upload
+blog.image.save-path: /usr/app/upload
+# 2MB
 blog.image.max-size: 2097152
+# swagger
+blog.swagger.enable: false
 
 
