--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -2,25 +2,25 @@ spring:
   application:
     name: BlogApplication
   datasource:
-    url: jdbc:mysql://192.168.106.128:3306/blog_system?characterEncoding=utf-8&useSSL=false
+    url: jdbc:mysql://192.168.106.129:3306/blog_system?characterEncoding=utf-8&useSSL=false
     driver-class-name: com.mysql.jdbc.Driver
     username: root
     password: 123456
   redis:
     port: 6379
-    host: 192.168.106.128
+    host: 192.168.106.129
     password: 123456
   data:
     solr:
-      host: http://192.168.106.128:8983/solr/blog_core
+      host: http://192.168.106.129:8983/solr/blog_core
 
 server:
   port: 8081
 
-blog.image.save-path: D:\Codes\BlogSystem\logs\images
+blog.image.save-path: /home/spike/docker/Blog/upload
 # 2MB
 blog.image.max-size: 2097152
 # swagger
-blog.swagger.enable: true
+blog.swagger.enable: false
 
 
