--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -6,21 +6,26 @@ spring:
     driver-class-name: com.mysql.jdbc.Driver
     username: root
     password: 123456
+  jpa:
+    show-sql: true
   redis:
     port: 6379
     host: 192.168.2.69
     password: 123456
+    database: 1
   data:
     solr:
       host: http://192.168.2.69:8983/solr/blog_core
-
 server:
-  port: 8081
+  port: 8082
 
-blog.image.save-path: /home/spike/docker/Blog/upload
+# docker部署
+# 应该是docker内部的路径 映射 /home/spike/docker/Blog/upload
+# blog.image.save-path: /usr/app/upload
+blog.image.save-path: D:\Codes\BlogSystem\logs\images
 # 2MB
 blog.image.max-size: 2097152
 # swagger
-blog.swagger.enable: false
+blog.swagger.enable: true
 
 
