--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -2,28 +2,29 @@ spring:
   application:
     name: BlogApplication
   datasource:
-    url: jdbc:mysql://192.168.2.69:3306/blog_system?characterEncoding=utf-8&useSSL=false
+    url: jdbc:mysql://172.25.109.213:3306/blog_system?characterEncoding=utf-8&useSSL=false
     driver-class-name: com.mysql.jdbc.Driver
     username: root
     password: 123456
+  jpa:
+    show-sql: false
   redis:
     port: 6379
-    host: 192.168.2.69
+    host: 172.25.109.213
     password: 123456
     database: 1
   data:
     solr:
-      host: http://192.168.2.69:8983/solr/blog_core
+      host: http://172.25.109.213:8983/solr/blog_core
 server:
-  port: 8082
-
+  port: 8080
 # docker部署
 # 应该是docker内部的路径 映射 /home/spike/docker/Blog/upload
 # blog.image.save-path: /usr/app/upload
-blog.image.save-path: D:\Codes\BlogSystem\logs\images
+blog.image.save-path: /root/docker/imageUpload
 # 2MB
 blog.image.max-size: 2097152
 # swagger
-blog.swagger.enable: true
+blog.swagger.enable: false
 
 
